--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@
     display: flex;
     width: 100%;
     justify-content: space-between;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     margin-top: 10px;
   }
   
@@ -768,7 +768,7 @@
   gap: 5px;
   width: 100%;
   justify-content: center;
-  margin: 10px 0;
+  margin: 15px 0 20px 0;
   padding: 0 20px;
 }
 
